# SIKRadio

./: CMakeLists.txt  README
include/: audio_packet.h  const.h  err.h  thread_safe_structures.h
src/receiver/: buffer.cpp  buffer.h  discover_controller.cpp  discover_controller.h  listening_controller.cpp  listening_controller.h  receiver_parameters_parser.cpp  receiver_parameters_parser.h  retransmission_controller.cpp  retransmission_controller.h  sik_receiver.cpp
src/sender/: const.h  main_controller.cpp  main_controller.h  primitive_test.h  retransmission_controller.cpp  retransmission_controller.h  sender_parameters_parser.cpp  sender_parameters_parser.h  sik_sender.cpp  streaming_controller.cpp  streaming_controller.h
src/utils/: err.cpp
